--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
-  
+  "homepage": "https://Rabimishra1.github.io/Water-Wise",
+
   "name": "water-wise",
   "version": "0.1.0",
   "private": true,
@@ -17,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    
+  "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
