--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Rabimishra1.github.io/Water-Wise",
+  
   "name": "water-wise",
   "version": "1.0.0",
   "private": true,
@@ -7,9 +7,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
+    
   },
   "dependencies": {
     "react": "^18.0.0",
