--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,5 @@
 {
   "homepage": "https://Rabimishra1.github.io/Water-Wise",
-
   "name": "water-wise",
   "version": "0.1.0",
   "private": true,
@@ -10,17 +9,18 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.1.2",
+    "react-router-dom": "^6.28.2",
     "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    
-  "deploy": "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build "
   },
   "eslintConfig": {
     "extends": [
