--- a/package.json
+++ b/package.json
@@ -1,21 +1,47 @@
 {
   
   "name": "water-wise",
+  
   "version": "1.0.0",
+  
   "private": true,
+  
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  
     
+  "start": "react-scripts start",
+  
+    
+  "build": "react-scripts build",
+  
+    
+  "test": "react-scripts test",
+  
+    
+  "eject": "react-scripts eject"
+  
   },
+  
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "^3.0.1"
+  
+    
+  "react": "^18.0.0",
+  
+    
+  "react-dom": "^18.0.0",
+  
+    
+  "react-router-dom": "^7.1.2",
+  
+    
+  "react-scripts": "^5.0.1"
+  
   },
+  
   "devDependencies": {
-    "gh-pages": "^6.2.0"
+  
+    
+  "gh-pages": "^6.2.0"
+  
   }
 }
